committing build + syntax